tests/tactics/success/0007-beta.ec
lemma l: forall (x:int), (lambda y, y = y) x.
proof.
beta.
trivial.
save.